@@ -37,6 +37,7 @@ Refactored MoveT struct (added methods)
 Bugfix: fixed csOO + csFIDE-style strings never showing check(mate).
 Refactored Trans(Position)Table into a c++ class.
 Converted code to use platform-agnostic std::thread.
+Implemented platform-agnostic Semaphore class and converted everyone to use it.
 
 Version 1.1:
 Build improvements: use Git for version control, cmake for building
